# checkpoint_restart

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  qsub_multi_mpiexec.sc  setup.py  test_pyjob.py
docs/: README.md  cli.md  example.md  getting-started.md  index.md  logic-and-orchestration.md  python-api.md  shell_scripts.md  usage_guide.md  workflows.md
examples/fail/: qsub.sc
examples/hang/: qsub.sc
examples/nan/: qsub.sc
examples/success/: qsub.sc  test_pyjob.py
job_monitoring/: check_nan.py
src/check_mate/: __init__.py  check_hang.py  check_nan.py  cli.py  optimal_checkpointing.py  test.py
src/check_mate/examples/: __init__.py  __main__.py  test_pyjob.py
src/check_mate/examples/fail/: qsub.sc
src/check_mate/examples/hang/: __main__.py  qsub.sc
src/check_mate/examples/nan/: qsub.sc
src/check_mate/examples/success/: __init__.py  qsub.sc
src/check_mate/resources/: __init__.py
src/exacheckmate/: __init__.py  check_hang.py  cli.py  optimal_checkpointing.py
src/exacheckmate/resources/: __init__.py
tests/: test_check_hang.py  test_check_nan.py  test_examples.py  test_optimal_checkpointing.py
