[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "exacheckmate"
version = "0.1.0"
description = "Monitoring and recovery helpers for exascale checkpoint/restart workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Huihuo Zheng", email = "huihuo.zheng@anl.gov" },
]
license = { text = "MIT" }
keywords = ["hpc", "checkpoint", "monitoring", "exascale"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/argonne-lcf/checkpoint_restart"
Documentation = "https://example.com/exacheckmate"
Source = "https://github.com/argonne-lcf/checkpoint_restart"

[project.scripts]
check-hang = "exacheckmate.check_hang:main"
check-nan = "exacheckmate.check_nan:main"
get-healthy-nodes = "exacheckmate.cli:get_healthy_nodes"
exacheckmate-launcher = "exacheckmate.cli:launcher"
exacheckmate-flush = "exacheckmate.cli:flush"
exacheckmate = "exacheckmate.cli:main"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]
dev = [
  "pre-commit>=3.6",
  "ruff>=0.4",
]

[tool.hatch.build]
include = [
  "src/exacheckmate",
  "README.md",
  "LICENSE",
  "mkdocs.yml",
  "docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/exacheckmate"]

[tool.hatch.build.targets.sdist]
include = [
  "src/exacheckmate",
  "README.md",
  "mkdocs.yml",
  "docs",
]

[tool.ruff]
line-length = 100
extend-exclude = ["docs"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
omit = ["tests/*"]
