[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "check-mate"
version = "0.1.0"
description = "Monitoring and recovery helpers for exascale checkpoint/restart workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Huihuo Zheng", email = "huihuo.zheng@anl.gov" },
]
license = { text = "MIT" }
keywords = ["hpc", "checkpoint", "monitoring", "exascale"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.9",
]

[project.urls]
Homepage = "https://github.com/argonne-lcf/checkpoint_restart"
Documentation = "https://example.com/check-mate"
Source = "https://github.com/argonne-lcf/checkpoint_restart"

[project.scripts]
check-hang = "check_mate.check_hang:main"
check-nan = "check_mate.check_nan:main"
get-healthy-nodes = "check_mate.cli:get_healthy_nodes"
check-mate-launcher = "check_mate.cli:launcher"
check-mate-flush = "check_mate.cli:flush"
check-mate = "check_mate.cli:main"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]
dev = [
  "pre-commit>=3.6",
  "ruff>=0.4",
]

[tool.hatch.build]
include = [
  "src/check_mate",
  "README.md",
  "LICENSE",
  "mkdocs.yml",
  "docs",
]

[tool.hatch.build.targets.wheel]
packages = ["check_mate"]

[tool.hatch.build.targets.sdist]
include = [
  "src/check_mate",
  "README.md",
  "mkdocs.yml",
  "docs",
]

[tool.ruff]
line-length = 100
extend-exclude = ["docs"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
omit = ["tests/*"]
